--- a/MicroBreweryWebApplication/Views/Shared/_Layout.cshtml
+++ b/MicroBreweryWebApplication/Views/Shared/_Layout.cshtml
@@ -8,6 +8,8 @@
     @Scripts.Render("~/bundles/modernizr")
 </head>
 <body>
+
+    <!-- --> 
     <div class="navbar navbar-inverse navbar-fixed-top">
         <div class="container">
             <div class="navbar-header">
@@ -16,22 +18,28 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                @Html.ActionLink("Application name", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
+                <!-- @Html.ActionLink("The MicroBrewery Application", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })-->
             </div>
+            
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
-                    <li>@Html.ActionLink("Home", "Index", "Home")</li>
-                    <li>@Html.ActionLink("About", "About", "Home")</li>
-                    <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
+                    <li>@Html.ActionLink("Home", "Index", "Home", new { @class = "glyphicon glyphicon-home" })</li>
+                    <li>@Html.ActionLink("User", "User", "Home", new { @class = "glyphicon glyphicon-user" })</li>
+                    <li>@Html.ActionLink("Admin", "Admin", "Home", new { @class = "glyphicon glyphicon-lock" })</li>
+                </ul>
+                <ul class="nav navbar-nav navbar-right">
+                    <li><a href="login.html"><span class="glyphicon glyphicon-user"></span> Sign Up</a></li>
+                    <li><a href="#"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
                 </ul>
             </div>
+
         </div>
     </div>
     <div class="container body-content">
         @RenderBody()
         <hr />
         <footer>
-            <p>&copy; @DateTime.Now.Year - My ASP.NET Application</p>
+            <p>&copy; @DateTime.Now.Year - The MicroBrewery Company</p>
         </footer>
     </div>
 
