--- a/MicroBreweryWebApplication/Views/Home/User.cshtml
+++ b/MicroBreweryWebApplication/Views/Home/User.cshtml
@@ -4,4 +4,19 @@
 <h2>@ViewBag.Title.</h2>
 <h3>@ViewBag.Message</h3>
 
-<p></p>
+<div class="container">
+    <div class="form-group">
+        <div class='input-group date' id='datetimepicker1'>
+            <input type='text' class="form-control" />
+            <span class="input-group-addon">
+                <span class="glyphicon glyphicon-calendar"></span>
+            </span>
+        </div>
+    </div>
+    <script type="text/javascript">
+                        $(function () {
+                            $('#datetimepicker1').datetimepicker();
+                        });
+    </script>
+
+</div>
