--- a/MicroBreweryWebApplication2/Views/Shared/_Layout.cshtml
+++ b/MicroBreweryWebApplication2/Views/Shared/_Layout.cshtml
@@ -26,6 +26,8 @@
                     <li>@Html.ActionLink("Home", "Index", "Home", new { @class = "glyphicon glyphicon-home" })</li>
                     <li>@Html.ActionLink("User", "User", "Home", new { @class = "glyphicon glyphicon-user" })</li>
                     <li>@Html.ActionLink("Admin", "Admin", "Home", new { @class = "glyphicon glyphicon-lock" })</li>
+                    <li>@Html.ActionLink("Create", "Create", "Home")</li>
+                    <li>@Html.ActionLink("Search", "Search", "Beer")</li>
                 </ul>
                 <ul class="nav navbar-nav navbar-right">
                     <li><a href="login.html"><span class="glyphicon glyphicon-user"></span> Sign Up</a></li>
