--- a/MicroBreweryWebApplication2/Content/bootstrap.css
+++ b/MicroBreweryWebApplication2/Content/bootstrap.css
@@ -4192,10 +4192,11 @@ textarea.input-group-sm > .input-group-btn > .btn {
 }
 
 .navbar-brand {
-  float: left;
-  padding: 15px 15px;
-  font-size: 18px;
-  line-height: 20px;
+    float: left;
+    padding: 15px 15px;
+    font-size: 30px;
+    line-height: 20px;
+    font-family: 'Facebook Letter Faces';
 }
 
 .navbar-brand:hover,
