--- a/MicroBreweryWebApplication2/Views/Shared/_Layout.cshtml
+++ b/MicroBreweryWebApplication2/Views/Shared/_Layout.cshtml
@@ -1,4 +1,6 @@
-﻿<!DOCTYPE html>
+﻿
+
+<!DOCTYPE html>
 <html>
 <head>
     <meta charset="utf-8" />
@@ -9,7 +11,7 @@
 </head>
 <body>
 
-    <!-- --> 
+
     <div class="navbar navbar-inverse navbar-fixed-top">
         <div class="container">
             <div class="navbar-header">
@@ -18,16 +20,22 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <!-- @Html.ActionLink("The MicroBrewery Application", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })-->
+                <img src="~/Content/beer.png" class="img-center" height="50" width="50" />  
+                @Html.ActionLink("MicroBrewery", "Index", "Home", null, new { @class = "navbar-brand" })
+
             </div>
             
             <div class="navbar-collapse collapse">
+                @*<a class="navbar-brand" href="home">NAVBAR</a>*@
                 <ul class="nav navbar-nav">
-                    <li>@Html.ActionLink("Home", "Index", "Home", new { @class = "glyphicon glyphicon-home" })</li>
+                    @*<li>@Html.ActionLink("Home", "Index", "Home", new { @class = "glyphicon glyphicon-home" })</li>
                     <li>@Html.ActionLink("User", "User", "Home", new { @class = "glyphicon glyphicon-user" })</li>
-                    <li>@Html.ActionLink("Admin", "Admin", "Home", new { @class = "glyphicon glyphicon-lock" })</li>
+                    <li>@Html.ActionLink("Admin", "Admin", "Home", new { @class = "glyphicon glyphicon-lock" })</li>*@
+                    <li>@Html.ActionLink("User", "User", "Home")</li>
+                    <li>@Html.ActionLink("Admin", "Admin", "Home")</li>
                     <li>@Html.ActionLink("Create", "Create", "Home")</li>
                     <li>@Html.ActionLink("Search", "Search", "Beer")</li>
+     
                 </ul>
                 <ul class="nav navbar-nav navbar-right">
                     <li><a href="login.html"><span class="glyphicon glyphicon-user"></span> Sign Up</a></li>
